# mastodon-new-tv-series-bot

./: .gitignore  Cargo.toml  README.md  config.toml.original
migrations/2023-11-08-170033_new_season/: down.sql  up.sql
src/: config.rs  main.rs  mastodon.rs  requests.rs  telegram.rs  utils.rs
src/apis/: mod.rs  tv_maze.rs
src/db/: mod.rs  models.rs  schema.rs
