[package]
name="tv_series_bot"
version="0.2.0"
edition="2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.3", features = ["derive"] }
diesel = { version = "2.1.1", features = ["sqlite"] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
scraper = "0.17.1"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
toml = "0.8.0"
